--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.header {
+  width: 3960px;
+  height: 150px;
+  background-color: #00a0e4;
+  opacity: 0.2;
+}
