--- a/src/components/Content/Content.module.scss
+++ b/src/components/Content/Content.module.scss
@@ -380,7 +380,7 @@
     height: 600px;
     position: absolute;
     .descImage1 {
-      width: 200px;
+      width: 185px;
       height: 260px;
       position: absolute;
       top: 45%;
@@ -393,12 +393,30 @@
       }
     }
     .descImage2 {
-      width: 150px;
-      height: 150px;
+      width: 185px;
+      height: 260px;
+      position: absolute;
+      top: 45%;
+      border-radius: 15px;
+      right: 13%;
+      cursor: pointer;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        transform: scale(1.03);
+      }
     }
     .descImage3 {
-      width: 150px;
-      height: 150px;
+      width: 185px;
+      height: 260px;
+      position: absolute;
+      top: 45%;
+      border-radius: 15px;
+      right: -4%;
+      cursor: pointer;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        transform: scale(1.03);
+      }
     }
   }
   .historyEkaterinaII {
@@ -407,30 +425,307 @@
     bottom: 0%;
     position: absolute;
     .imgMelissino {
-      width: 150px;
-      height: 150px;
+      width: 200px;
+      height: 261px;
+      cursor: pointer;
+      position: absolute;
+      top: 10%;
+      left: 15%;
+      border-radius: 15px;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        transform: scale(1.03);
+      }
     }
     .imgDescMelissino {
-      width: 150px;
-      height: 150px;
+      width: 200px;
+      height: 261px;
+      cursor: pointer;
+      position: absolute;
+      top: 10%;
+      left: 33%;
+      opacity: 0.9;
+      border-radius: 15px;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        transform: scale(1.03);
+      }
+    }
+    .imgArakcheev {
+      width: 190px;
+      height: 261px;
+      cursor: pointer;
+      position: absolute;
+      top: 10%;
+      left: 51%;
+      border-radius: 15px;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        transform: scale(1.03);
+      }
+    }
+    .imgDescArakcheev {
+      width: 200px;
+      height: 261px;
+      cursor: pointer;
+      position: absolute;
+      top: 10%;
+      right: 16%;
+      border-radius: 15px;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        transform: scale(1.03);
+      }
+    }
+    .imgSmoking {
+      z-index: 1;
+      width: 200px;
+      height: 261px;
+      cursor: pointer;
+      position: absolute;
+      top: 10%;
+      right: -3%;
+      border-radius: 15px;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        transform: scale(1.03);
+      }
+    }
+    .imgCadets {
+      width: 200px;
+      height: 281px;
+      cursor: pointer;
+      position: absolute;
+      bottom: 5%;
+      left: 10%;
+      border-radius: 15px;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        transform: scale(1.03);
+      }
+    }
+    .imgGreece {
+      width: 315px;
+      height: 281px;
+      cursor: pointer;
+      position: absolute;
+      bottom: 5%;
+      left: 29%;
+      border-radius: 15px;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        transform: scale(1.03);
+      }
+    }
+    .imgZnamya {
+      width: 200px;
+      height: 281px;
+      cursor: pointer;
+      position: absolute;
+      bottom: 5%;
+      left: 57%;
+      border-radius: 15px;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        transform: scale(1.03);
+      }
+    }
+    .imgPlan {
+      z-index: 1;
+      width: 400px;
+      height: 281px;
+      cursor: pointer;
+      position: absolute;
+      bottom: 5%;
+      right: -6%;
+      border-radius: 15px;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        transform: scale(1.03);
+      }
     }
   }
 }
 .imp5 {
+  position: relative;
   width: 380px;
   height: 1250px;
   background-image: url("/src/assets/img/имп5.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  .historyPavelI {
+    position: absolute;
+    width: 380px;
+    height: 1250px;
+    .imgPlanTown {
+      width: 260px;
+      height: 261px;
+      cursor: pointer;
+      position: absolute;
+      top: 53%;
+      left: 23%;
+      border-radius: 15px;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        transform: scale(1.03);
+      }
+    }
+    .imgEkaterinaDesc {
+      width: 200px;
+      height: 281px;
+      cursor: pointer;
+      position: absolute;
+      bottom: 2.5%;
+      opacity: 0.85;
+      left: 38%;
+      border-radius: 15px;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        transform: scale(1.03);
+      }
+    }
+  }
 }
 .imp6 {
+  position: relative;
   width: 846px;
   height: 1250px;
   background-image: url("/src/assets/img/Император_ImgID1.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  .description {
+    position: absolute;
+    width: 846px;
+    height: 600px;
+    .imgDesc1 {
+      width: 185px;
+      height: 260px;
+      position: absolute;
+      top: 45%;
+      border-radius: 15px;
+      left: 5%;
+      cursor: pointer;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        transform: scale(1.03);
+      }
+    }
+    .imgDesc2 {
+      width: 185px;
+      height: 260px;
+      position: absolute;
+      top: 45%;
+      border-radius: 15px;
+      right: -11%;
+      cursor: pointer;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        transform: scale(1.03);
+      }
+    }
+  }
+  .historyAlexanderI {
+    position: absolute;
+    width: 846px;
+    height: 650px;
+    bottom: 0%;
+    .imgZubov {
+      width: 180px;
+      height: 261px;
+      cursor: pointer;
+      position: absolute;
+      top: 10%;
+      left: 3%;
+      border-radius: 15px;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        transform: scale(1.03);
+      }
+    }
+    .imgKorpus {
+      width: 190px;
+      height: 261px;
+      cursor: pointer;
+      position: absolute;
+      top: 10%;
+      left: 29%;
+      opacity: 0.95;
+      border-radius: 15px;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        transform: scale(1.03);
+      }
+    }
+    .imgVolont {
+      width: 190px;
+      height: 261px;
+      cursor: pointer;
+      position: absolute;
+      top: 10%;
+      left: 55%;
+      opacity: 0.95;
+      border-radius: 15px;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        transform: scale(1.03);
+      }
+    }
+    .imgExcercirgaus {
+      width: 190px;
+      height: 261px;
+      cursor: pointer;
+      position: absolute;
+      top: 10%;
+      right: -4%;
+      opacity: 0.95;
+      border-radius: 15px;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        transform: scale(1.03);
+      }
+    }
+    .imgProjectStone {
+      width: 400px;
+      height: 281px;
+      cursor: pointer;
+      position: absolute;
+      bottom: 5%;
+      left: 3%;
+      border-radius: 15px;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        transform: scale(1.03);
+      }
+    }
+    .imgProjectEkaterinaII {
+      width: 190px;
+      height: 281px;
+      cursor: pointer;
+      position: absolute;
+      bottom: 5%;
+      left: 54%;
+      border-radius: 15px;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        transform: scale(1.03);
+      }
+    }
+    .imgSmokingAlexI {
+      width: 190px;
+      height: 281px;
+      cursor: pointer;
+      position: absolute;
+      bottom: 5%;
+      right: -3%;
+      border-radius: 15px;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        transform: scale(1.03);
+      }
+    }
+  }
 }
 .imp7 {
   width: 1015px;
