--- a/src/components/Content/Content.module.scss
+++ b/src/components/Content/Content.module.scss
@@ -12,6 +12,7 @@
 }
 
 .imp1 {
+  border: 2px solid #e4c03e;
   position: relative;
   width: 691px;
   height: 1250px;
@@ -141,6 +142,9 @@
   }
 }
 .imp2 {
+  border-top: 2px solid #e4c03e;
+  border-right: 2px solid #e4c03e;
+  border-bottom: 2px solid #e4c03e;
   position: relative;
   width: 613px;
   height: 1250px;
@@ -255,6 +259,9 @@
   }
 }
 .imp3 {
+  border-top: 2px solid #e4c03e;
+  border-right: 2px solid #e4c03e;
+  border-bottom: 2px solid #e4c03e;
   width: 945px;
   height: 1250px;
   background-image: url("/src/assets/img/имп3.png");
@@ -368,6 +375,9 @@
   }
 }
 .imp4 {
+  border-top: 2px solid #e4c03e;
+  border-right: 2px solid #e4c03e;
+  border-bottom: 2px solid #e4c03e;
   position: relative;
   width: 1330px;
   height: 1250px;
@@ -548,6 +558,9 @@
   }
 }
 .imp5 {
+  border-top: 2px solid #e4c03e;
+  border-right: 2px solid #e4c03e;
+  border-bottom: 2px solid #e4c03e;
   position: relative;
   width: 380px;
   height: 1250px;
@@ -589,6 +602,9 @@
   }
 }
 .imp6 {
+  border-top: 2px solid #e4c03e;
+  border-right: 2px solid #e4c03e;
+  border-bottom: 2px solid #e4c03e;
   position: relative;
   width: 846px;
   height: 1250px;
@@ -732,22 +748,198 @@
   }
 }
 .imp7 {
+  position: relative;
+  border-top: 2px solid #e4c03e;
+  border-right: 2px solid #e4c03e;
+  border-bottom: 2px solid #e4c03e;
   width: 1015px;
   height: 1250px;
   background-image: url("/src/assets/img/Император_ImgID2.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  .description {
+    position: absolute;
+    width: 1015px;
+    height: 600px;
+    .descImage {
+      z-index: 1;
+      width: 185px;
+      height: 260px;
+      position: absolute;
+      top: 45%;
+      border-radius: 15px;
+      right: -8%;
+      cursor: pointer;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        transform: scale(1.03);
+      }
+    }
+  }
+  .historyNikolayI {
+    position: absolute;
+    width: 1015px;
+    height: 650px;
+    bottom: 0%;
+    .imgSmokingNikolayI {
+      width: 190px;
+      height: 261px;
+      cursor: pointer;
+      position: absolute;
+      top: 10%;
+      left: 6%;
+      border-radius: 15px;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        transform: scale(1.03);
+      }
+    }
+    .imgCadetKorpus {
+      width: 190px;
+      height: 261px;
+      cursor: pointer;
+      position: absolute;
+      top: 10%;
+      left: 28%;
+      border-radius: 15px;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        transform: scale(1.03);
+      }
+    }
+    .imgMendeleev {
+      width: 190px;
+      height: 261px;
+      cursor: pointer;
+      position: absolute;
+      top: 10%;
+      left: 50%;
+      border-radius: 15px;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        transform: scale(1.03);
+      }
+    }
+    .imgDobrolyubov {
+      width: 190px;
+      height: 261px;
+      cursor: pointer;
+      position: absolute;
+      top: 10%;
+      right: 9%;
+      border-radius: 15px;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        transform: scale(1.03);
+      }
+    }
+    .imgChernishevskiy {
+      z-index: 1;
+      width: 190px;
+      height: 261px;
+      cursor: pointer;
+      position: absolute;
+      top: 10%;
+      right: -13%;
+      border-radius: 15px;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        transform: scale(1.03);
+      }
+    }
+    .imgGeneralPlan2 {
+      width: 410px;
+      height: 281px;
+      cursor: pointer;
+      position: absolute;
+      bottom: 5%;
+      left: 5%;
+      border-radius: 15px;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        transform: scale(1.03);
+      }
+    }
+    .imgZnamya1844 {
+      width: 200px;
+      height: 281px;
+      cursor: pointer;
+      position: absolute;
+      bottom: 5%;
+      left: 48%;
+      border-radius: 15px;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        transform: scale(1.03);
+        border: 1px solid #41403d;
+      }
+    }
+    .imgGeneralPlan1858 {
+      z-index: 1;
+      width: 400px;
+      height: 281px;
+      cursor: pointer;
+      position: absolute;
+      bottom: 5%;
+      right: -11%;
+      border-radius: 15px;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        transform: scale(1.03);
+        border: 1px solid #ffffff;
+      }
+    }
+  }
 }
 .imp8 {
+  position: relative;
+  border-top: 2px solid #e4c03e;
+  border-right: 2px solid #e4c03e;
+  border-bottom: 2px solid #e4c03e;
   width: 880px;
   height: 1250px;
   background-image: url("/src/assets/img/Император_ImgID3.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  .historyAlexanderII {
+    width: 880px;
+    height: 650px;
+    position: absolute;
+    bottom: 0%;
+    .imgAttestat {
+      width: 190px;
+      height: 261px;
+      cursor: pointer;
+      position: absolute;
+      top: 10%;
+      left: 18%;
+      border-radius: 15px;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        transform: scale(1.03);
+      }
+    }
+    .imgSmokingAlexII {
+      width: 190px;
+      height: 261px;
+      cursor: pointer;
+      position: absolute;
+      top: 10%;
+      left: 43%;
+      border-radius: 15px;
+      transition: all 250ms ease-in-out;
+      &:hover {
+        transform: scale(1.03);
+      }
+    }
+  }
 }
 .imp9 {
+  border-top: 2px solid #e4c03e;
+  border-right: 2px solid #e4c03e;
+  border-bottom: 2px solid #e4c03e;
   width: 440px;
   height: 1250px;
   background-image: url("/src/assets/img/Император_ImgID4.png");
@@ -756,6 +948,9 @@
   background-position: center;
 }
 .imp10 {
+  border-top: 2px solid #e4c03e;
+  border-right: 2px solid #e4c03e;
+  border-bottom: 2px solid #e4c03e;
   width: 778px;
   height: 1250px;
   background-image: url("/src/assets/img/Император_ImgID5.png");
