--- a/src/components/Content/Content.module.scss
+++ b/src/components/Content/Content.module.scss
@@ -33,6 +33,23 @@
       height: 282px;
       transition: all 250ms ease-in-out;
     }
+    .modal {
+      position: relative;
+      width: 790px;
+      height: 600px;
+      .imgModal {
+        width: 400px;
+        height: 600px;
+        border-radius: 15px;
+      }
+      .textModal {
+        height: 600px;
+        width: 350px;
+        position: absolute;
+        top: 0;
+        right: 5px;
+      }
+    }
 
     position: absolute;
     width: 691px;
