--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -2,7 +2,7 @@
   z-index: 2;
   height: 1250px;
   width: 1680px;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0);
   position: absolute;
   top: 0;
   left: 0;
@@ -22,10 +22,11 @@
   z-index: 2;
   padding: 40px 30px;
   border-radius: 12px;
-  background-color: #fff;
-  width: 50vw;
+  background-color: #e8e5e5;
+
   opacity: 0;
   transition: all 250ms ease-in-out;
+  transform: translate(-23%, -7%);
   .button_close {
     cursor: pointer;
     width: 27px;
