--- a/src/components/Content/Content.module.scss
+++ b/src/components/Content/Content.module.scss
@@ -41,6 +41,17 @@
         height: 800px;
         border-radius: 12px;
       }
+      .imgModalActive {
+        animation: myAnimation 250ms ease-in-out;
+      }
+      @keyframes myAnimation {
+        0% {
+          opacity: 0;
+        }
+        100% {
+          opacity: 1;
+        }
+      }
     }
 
     position: absolute;
