--- a/src/components/Content/Content.module.scss
+++ b/src/components/Content/Content.module.scss
@@ -35,11 +35,19 @@
     }
     .modal {
       position: relative;
-      width: 790px;
-      height: 800px;
+      width: 1000px;
+      height: 900px;
       .imgModal {
-        height: 800px;
+        border: 2px solid #ffffff;
+        position: absolute;
+        top: 3%;
+        left: 12%;
         border-radius: 12px;
+
+        transition: transform 250ms ease-in-out;
+        &:hover {
+          transform: scale(1.02);
+        }
       }
       .imgModalActive {
         animation: myAnimation 250ms ease-in-out;
