--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,6 +5,7 @@
 .header {
   width: 7920px;
   height: 400px;
-  background-color: #00a0e4;
-  opacity: 0.2;
+  background-image: url("../../assets/img/Header.png");
+  background-repeat: repeat;
+  background-size: contain;
 }
