--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,8 +4,8 @@
 
 .header {
   width: 7920px;
-  height: 400px;
-  background-image: url("../../assets/img/Header.png");
-  background-repeat: repeat;
-  background-size: contain;
+  height: 1000px;
+  background-image: url("../../assets/img/NewLinear1.png");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
