--- a/src/components/Content/Content.module.scss
+++ b/src/components/Content/Content.module.scss
@@ -34,14 +34,30 @@
       transition: all 250ms ease-in-out;
     }
     .modal {
+      position: relative;
       width: 1000px;
       height: 900px;
       display: flex;
       justify-content: center;
       align-items: start;
+
       .imageArray {
+        position: absolute;
+
         width: 900px;
         height: 100%;
+      }
+      .descriptionImage {
+        position: absolute;
+        right: 20px;
+        width: 550px;
+        height: 795px;
+        border: 2px solid #ffffff;
+        border-radius: 15px;
+        top: 137.5%;
+        overflow-y: "auto";
+        font-size: 15px;
+        padding: 8px;
       }
 
       .imgModal {
