--- a/src/components/Content/Content.module.scss
+++ b/src/components/Content/Content.module.scss
@@ -16,7 +16,7 @@
   position: relative;
   width: 691px;
   height: 1250px;
-  background-image: url("/src/assets/img/Петр1.png");
+  background-image: url("/Петр1.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -195,7 +195,7 @@
   position: relative;
   width: 613px;
   height: 1250px;
-  background-image: url("/src/assets/img/имп2.png");
+  background-image: url("/имп2.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -313,7 +313,7 @@
   border-bottom: 2px solid #e4c03e;
   width: 945px;
   height: 1250px;
-  background-image: url("/src/assets/img/имп3.png");
+  background-image: url("/имп3.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -431,7 +431,7 @@
   position: relative;
   width: 1330px;
   height: 1250px;
-  background-image: url("/src/assets/img/имп4.png");
+  background-image: url("/имп4.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -614,7 +614,7 @@
   position: relative;
   width: 380px;
   height: 1250px;
-  background-image: url("/src/assets/img/имп5.png");
+  background-image: url("/имп5.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -658,7 +658,7 @@
   position: relative;
   width: 846px;
   height: 1250px;
-  background-image: url("/src/assets/img/Император_ImgID1.png");
+  background-image: url("/Император_ImgID1.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -804,7 +804,7 @@
   border-bottom: 2px solid #e4c03e;
   width: 1015px;
   height: 1250px;
-  background-image: url("/src/assets/img/Император_ImgID2.png");
+  background-image: url("/Император_ImgID2.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -949,7 +949,7 @@
   border-bottom: 2px solid #e4c03e;
   width: 880px;
   height: 1250px;
-  background-image: url("/src/assets/img/Император_ImgID3.png");
+  background-image: url("/Император_ImgID3.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -1061,7 +1061,7 @@
   border-bottom: 2px solid #e4c03e;
   width: 440px;
   height: 1250px;
-  background-image: url("/src/assets/img/Император_ImgID4.png");
+  background-image: url("/Император_ImgID4.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -1107,7 +1107,7 @@
   border-bottom: 2px solid #e4c03e;
   width: 778px;
   height: 1250px;
-  background-image: url("/src/assets/img/Император_ImgID5.png");
+  background-image: url("/Император_ImgID5.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
