--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,7 +5,7 @@
 .header {
   width: 7920px;
   height: 1000px;
-  background-image: url("../../assets/img/NewLinear1.png");
+  background-image: url("/NewLinear1.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
