change size image

--- a/src/components/Content/Content.module.scss
+++ b/src/components/Content/Content.module.scss
@@ -16,7 +16,7 @@
   position: relative;
   width: 691px;
   height: 1250px;
-  background-image: url("/Петр1.png");
+  background-image: url("/Петр1-min.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -313,7 +313,7 @@
   border-bottom: 2px solid #e4c03e;
   width: 945px;
   height: 1250px;
-  background-image: url("/имп3.png");
+  background-image: url("/Имп3и.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
