change size image

--- a/src/components/Content/Content.module.scss
+++ b/src/components/Content/Content.module.scss
@@ -16,7 +16,8 @@
   position: relative;
   width: 691px;
   height: 1250px;
-  background-image: url("/Петр1-min.png");
+  background-image: url("/Petr1.png");
+
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -195,7 +196,7 @@
   position: relative;
   width: 613px;
   height: 1250px;
-  background-image: url("/имп2.png");
+  background-image: url("/Anna.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -313,7 +314,7 @@
   border-bottom: 2px solid #e4c03e;
   width: 945px;
   height: 1250px;
-  background-image: url("/Имп3и.png");
+  background-image: url("/Ekat1.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -431,7 +432,7 @@
   position: relative;
   width: 1330px;
   height: 1250px;
-  background-image: url("/имп4.png");
+  background-image: url("/Ekat2.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -614,7 +615,7 @@
   position: relative;
   width: 380px;
   height: 1250px;
-  background-image: url("/имп5.png");
+  background-image: url("/Pavel1.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
