--- a/src/components/Content/Content.module.scss
+++ b/src/components/Content/Content.module.scss
@@ -12,14 +12,14 @@
 }
 
 .imp1 {
-  border: 2px solid #e4c03e;
+  border: 0.3px solid #ffffff;
   position: relative;
   width: 691px;
   height: 1251px;
-  background-image: url("/Petr1.png");
+  background-image: url("/Petrr1.png");
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center -3px;
+  background-position: -15px -5px;
   padding-top: -2px;
   .description {
     .descImage {
@@ -174,7 +174,7 @@
     }
     .imgMinih {
       z-index: 1;
-      width: 190px;
+      width: 200px;
       height: 254px;
       position: absolute;
       overflow: hidden;
@@ -204,13 +204,14 @@
   }
 }
 .imp2 {
-  border-top: 2px solid #e4c03e;
-  border-right: 2px solid #e4c03e;
-  border-bottom: 2px solid #e4c03e;
+  border-top: 0.3px solid #fff;
+  border-right: 0.3px solid #fff;
+  border-bottom: 0.3px solid #fff;
+  border-left: none;
   position: relative;
   width: 613px;
   height: 1250px;
-  background-image: url("/Anna.png");
+  background-image: url("/AnnaI.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -267,16 +268,16 @@
     }
 
     .imgLomonosov {
-      z-index: 1;
-      width: 220px;
-      height: 281px;
+      z-index: 2;
+      width: 160px;
+      height: 231px;
       overflow: hidden;
       cursor: pointer;
       transition: all 250ms ease-in-out;
       position: absolute;
-      border-radius: 15px;
-      bottom: 5%;
-      right: -5%;
+
+      bottom: 37%;
+      right: -29%;
       &:hover {
         transform: scale(1.03);
       }
@@ -301,12 +302,12 @@
   }
 }
 .imp3 {
-  border-top: 2px solid #e4c03e;
-  border-right: 2px solid #e4c03e;
-  border-bottom: 2px solid #e4c03e;
+  border-top: 0.3px solid #fff;
+  border-right: 0.3px solid #fff;
+  border-bottom: 0.3px solid #fff;
   width: 945px;
   height: 1250px;
-  background-image: url("/Ekat1.png");
+  background-image: url("/ElizI.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -316,12 +317,12 @@
     width: 945px;
     height: 600px;
     .descImage {
-      width: 190px;
-      height: 260px;
+      width: 180px;
+      height: 250px;
       position: absolute;
-      border-radius: 15px;
-      top: 43%;
-      left: 1%;
+      z-index: 2;
+      bottom: -28%;
+      left: 33%;
       &:hover {
         transform: scale(1.02);
       }
@@ -348,24 +349,24 @@
       }
     }
     .imgKutuzov {
-      width: 200px;
-      height: 281px;
-      bottom: 5%;
-      left: 39%;
+      width: 150px;
+      height: 221px;
+      bottom: 2%;
+      left: 35%;
       cursor: pointer;
       transition: all 250ms ease-in-out;
       position: absolute;
-      border-radius: 15px;
+
       &:hover {
         transform: scale(1.03);
       }
     }
 
     .imgIllarion {
-      width: 200px;
-      height: 281px;
-      bottom: 5%;
-      left: 12%;
+      width: 280px;
+      height: 201px;
+      bottom: 2%;
+      left: 2%;
       cursor: pointer;
       transition: all 250ms ease-in-out;
       position: absolute;
@@ -389,10 +390,11 @@
       }
     }
     .imgShuvalovDesc {
-      width: 200px;
-      height: 281px;
-      bottom: 5%;
-      left: 63%;
+      width: 300px;
+      height: 221px;
+      z-index: 2;
+      bottom: 38%;
+      left: 27%;
       cursor: pointer;
       transition: all 250ms ease-in-out;
       position: absolute;
@@ -432,13 +434,13 @@
   }
 }
 .imp4 {
-  border-top: 2px solid #e4c03e;
-  border-right: 2px solid #e4c03e;
-  border-bottom: 2px solid #e4c03e;
+  border-top: 0.3px solid #fff;
+  border-right: 0.3px solid #fff;
+  border-bottom: 0.3px solid #fff;
   position: relative;
   width: 1330px;
   height: 1250px;
-  background-image: url("/Ekat2.png");
+  background-image: url("/EkatII.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -615,16 +617,16 @@
   }
 }
 .imp5 {
-  border-top: 2px solid #e4c03e;
-  border-right: 2px solid #e4c03e;
-  border-bottom: 2px solid #e4c03e;
+  border-top: 0.3px solid #fff;
+  border-right: 0.3px solid #fff;
+  border-bottom: 0.3px solid #fff;
   position: relative;
   width: 380px;
   height: 1250px;
-  background-image: url("/Pavel1.png");
+  background-image: url("/PavI.png");
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
+  background-position: -330px center;
   .historyPavelI {
     position: absolute;
     width: 380px;
@@ -659,13 +661,13 @@
   }
 }
 .imp6 {
-  border-top: 2px solid #e4c03e;
-  border-right: 2px solid #e4c03e;
-  border-bottom: 2px solid #e4c03e;
+  border-top: 0.3px solid #fff;
+  border-right: 0.3px solid #fff;
+  border-bottom: 0.3px solid #fff;
   position: relative;
   width: 846px;
   height: 1250px;
-  background-image: url("/Император_ImgID1.png");
+  background-image: url("/AlexI.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -820,12 +822,12 @@
 }
 .imp7 {
   position: relative;
-  border-top: 2px solid #e4c03e;
-  border-right: 2px solid #e4c03e;
-  border-bottom: 2px solid #e4c03e;
+  border-top: 0.3px solid #fff;
+  border-right: 0.3px solid #fff;
+  border-bottom: 0.3px solid #fff;
   width: 1015px;
   height: 1250px;
-  background-image: url("/Император_ImgID2.png");
+  background-image: url("/NikolaI.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -965,12 +967,12 @@
 }
 .imp8 {
   position: relative;
-  border-top: 2px solid #e4c03e;
-  border-right: 2px solid #e4c03e;
-  border-bottom: 2px solid #e4c03e;
+  border-top: 0.3px solid #fff;
+  border-right: 0.3px solid #fff;
+  border-bottom: 0.3px solid #fff;
   width: 880px;
   height: 1250px;
-  background-image: url("/Император_ImgID3.png");
+  background-image: url("/AlexII.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -1077,12 +1079,12 @@
 }
 .imp9 {
   position: relative;
-  border-top: 2px solid #e4c03e;
-  border-right: 2px solid #e4c03e;
-  border-bottom: 2px solid #e4c03e;
+  border-top: 0.3px solid #fff;
+  border-right: 0.3px solid #fff;
+  border-bottom: 0.3px solid #fff;
   width: 440px;
   height: 1250px;
-  background-image: url("/Император_ImgID4.png");
+  background-image: url("/AlexIII.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -1123,12 +1125,12 @@
 }
 .imp10 {
   position: relative;
-  border-top: 2px solid #e4c03e;
-  border-right: 2px solid #e4c03e;
-  border-bottom: 2px solid #e4c03e;
+  border-top: 0.3px solid #fff;
+  border-right: 0.3px solid #fff;
+  border-bottom: 0.3px solid #fff;
   width: 778px;
   height: 1250px;
-  background-image: url("/Император_ImgID5.png");
+  background-image: url("/NikolaII.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
