--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,7 +5,72 @@
 .header {
   width: 7920px;
   height: 1000px;
-  background-image: url("/NewLinear1.png");
+  // background-image: url("/qwerty.png");
   background-repeat: no-repeat;
   background-size: cover;
+  &Top {
+    position: relative;
+    width: 100%;
+    height: 540px;
+    background-color: #176c76;
+    .Sveyskiy {
+      position: absolute;
+      top: 1%;
+      left: 1%;
+      z-index: 2;
+      width: 200px;
+      height: 250px;
+      .imgSveyskiy {
+        background-size: cover;
+        background-repeat: no-repeat;
+      }
+    }
+    .descSveyskiy {
+      position: absolute;
+      top: 55%;
+      left: 1%;
+      width: 200px;
+      height: 100px;
+      text-align: center;
+      color: #e9cd67;
+      text-shadow: 1px 1px 3px #000;
+    }
+    .Mordvinov {
+      position: absolute;
+      top: 1%;
+      left: 11.6%;
+      z-index: 2;
+      width: 200px;
+      height: 260px;
+      .imgMordvinov {
+        background-size: cover;
+        background-repeat: no-repeat;
+        height: 260px;
+      }
+    }
+    .descMordvinov {
+      position: absolute;
+      top: 52%;
+      left: 11.6%;
+      width: 200px;
+      height: 100px;
+      text-align: center;
+      color: #e9cd67;
+      text-shadow: 1px 1px 3px #000;
+    }
+    .bottomLine {
+      z-index: 1;
+      width: 100%;
+      height: 35px;
+      background-color: #61dfe8;
+      position: absolute;
+      bottom: 0%;
+    }
+  }
+
+  &Bottom {
+    width: 100%;
+    height: 460px;
+    background-color: #176c76;
+  }
 }
